<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_string" android:id="@+id/inputTitleEditText"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/content_string" android:id="@+id/inputContentEditText"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/inputTagRecyclerView" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/inputTagAddButton">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tag" android:id="@+id/inputTagEditText"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/inputAddButton"
            android:id="@+id/inputTagRecyclerView"/>
    <Button
            android:text="@string/ok_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inputAddButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/cancel_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inputCancelButton" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="ADD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inputTagAddButton"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>