<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cardView"
            app:cardUseCompatPadding="true"
    >
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/profileImageView" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:text="名前"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameTextView"
                    app:layout_constraintTop_toTopOf="@+id/profileImageView"
                    app:layout_constraintBottom_toBottomOf="@+id/profileImageView"
                    app:layout_constraintStart_toEndOf="@+id/profileImageView" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.1" android:textSize="24sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/linearLayout" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp">
        <androidx.cardview.widget.CardView
                app:cardUseCompatPadding="true"
                android:layout_width="0dip"
                android:layout_height="match_parent" android:layout_weight="1">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp" tools:srcCompat="@tools:sample/avatars"
                        android:id="@+id/imageView6" android:layout_gravity="center"/>
                <TextView
                        android:text="@string/post_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView3"
                        android:layout_gravity="center"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView4"
                        android:layout_gravity="center" tools:text="1234"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                app:cardUseCompatPadding="true"
                android:layout_width="0dip"
                android:layout_height="wrap_content" android:layout_weight="1">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp" tools:srcCompat="@tools:sample/avatars"
                        android:id="@+id/imageView7" android:layout_gravity="center"/>
                <TextView
                        android:text="@string/overall_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView5"
                        android:layout_gravity="center"/>
                <TextView
                        android:text="567"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView6"
                        android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="0dip"
                app:cardUseCompatPadding="true"
                android:layout_height="match_parent" android:layout_weight="1">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp" tools:srcCompat="@tools:sample/avatars"
                        android:id="@+id/imageView8" android:layout_gravity="center"/>
                <TextView
                        android:text="@string/comment_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView7"
                        android:layout_gravity="center"/>
                <TextView
                        android:text="890"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView8"
                        android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_width="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>